--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Welcome to&nbsp;our coffee&nbsp;table!
+title:
 logo: /assets/img/logo.png
 description: This is your guide to a more beautiful neural network design. Get your copy now!
 show_downloads: true
