--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:
+title: COFFEE TABLE SOLUTIONS NO. 2
 logo: /assets/img/logo.png
 description: This is your guide to a more beautiful neural network design. Get your copy now!
 show_downloads: true
