--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: COFFEE TABLE SOLUTIONS NO. 2
+title: Stefanie Schutera
 logo: /assets/img/logo.png
-description: This is your guide to a more beautiful neural network design. Get your copy now!
+description: This is my personal website.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
