--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Stefanie Schutera
 logo: /assets/img/logo.png
+logo-subpage: /assets/img/logo-subpage.png
 description: This is my personal website.
 show_downloads: true
 google_analytics:
