--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Stefanie Schutera
 logo: /assets/img/logo.png
 logo-subpage: /assets/img/logo-subpage.png
-logo-subpage: /assets/img/lfunny-face.png
+funny-face: /assets/img/funny-face.png
 description: This is my personal website.
 show_downloads: true
 google_analytics:
